--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,7 +39,7 @@ button {
 
 .clearBtn {
     font-family: "almoni-tzar";
-    background-color: #f44336;
+    background-color: #777777;
     border: none;
     color: white;
     padding: 15px;
